added cors rules

--- a/ServiceCatalog/ServiceCatalog.csproj
+++ b/ServiceCatalog/ServiceCatalog.csproj
@@ -383,6 +383,8 @@
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\PublishProfiles\serviceApp200 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\serviceApp200 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\serviceApp23 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\serviceApp23 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\servicecatalogapp - FTP.pubxml" />
