--- a/ServiceCatalog/packages.config
+++ b/ServiceCatalog/packages.config
@@ -5,6 +5,7 @@
   <package id="CsvHelper" version="2.16.2.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="FileHelpers" version="3.1.5" targetFramework="net452" />
+  <package id="Grid.Mvc" version="3.0.0" targetFramework="net452" />
   <package id="Hyak.Common" version="1.0.2" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
